# mcp-admit

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  mcp-admit.yml
examples/: benign_metadata_manifest.json  broad_capabilities_manifest.json  dangerous_container_mcp_config.json  fake_stdio_mcp_config.json  fake_stdio_mcp_server.py  fixture_matrix.yaml  mixed_project_config.json  nested_mcp_config.json  policy_example.yaml  registry_risky_server.json  registry_safe_server.json  supply_chain_stdio_config.json  toxic_flow_manifest.json  yaml_mcp_config.yaml
examples/client_configs/.cursor/: mcp.json
examples/client_configs/Claude/: claude_desktop_config.json
examples/client_configs/windsurf/: mcp_config.json
schemas/: admission.schema.json  audit.schema.json  inventory.schema.json  release-check.schema.json  report.schema.json  runtime-policy.schema.json
src/mcp_admit/: __main__.py  admission.py  approvals.py  benchmark.py  cli.py  diff.py  discovery.py  explainability.py  hashing.py  inspection.py  inventory.py  mcp_stdio.py  models.py  policy.py  release_check.py  review_pack.py  risk.py  runtime_policy.py  scanner.py  schemas.py  standards.py  summary.py
src/mcp_admit/parsers/: __init__.py  config.py  manifest.py
src/mcp_admit/reports/: __init__.py  inspection_report.py  json_report.py  markdown_report.py  sarif_report.py
tests/: test_admission.py  test_benchmark.py  test_cli.py  test_config_parser.py  test_discovery.py  test_hash_diff.py  test_inspection.py  test_inventory.py  test_manifest_parser.py  test_mcp_stdio.py  test_no_exec.py  test_policy.py  test_reports.py  test_review_pack_release.py  test_risk.py  test_rules.py  test_runtime_policy.py  test_schemas.py
(+8 files in other folders)
